<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PayPalPaymentFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp"
        style="?android:attr/buttonBarStyle"
        android:orientation="vertical">
        <TextView
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textSize="18sp"
            android:text="@string/please_input_your_pay_pal_info"
            android:textColor="@color/material_on_background_emphasis_high_type" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSendPayPalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:drawableLeft="@drawable/ic_paypal"
            android:drawableTint="@color/material_on_background_emphasis_high_type"
            android:text="@string/validate"
            android:textColor="@color/material_on_background_emphasis_high_type"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</androidx.cardview.widget.CardView>