<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewChoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_your_mode_of_payment"
        android:textColor="@color/material_on_background_emphasis_high_type" />


    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:drawableLeft="@drawable/ic_credit_card"
            android:drawableTint="@color/material_on_background_emphasis_high_type"
            android:text="@string/card"
            android:textColor="@color/material_on_background_emphasis_high_type"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="RtlHardcoded"
            tools:targetApi="m" />

        <Button
            android:id="@+id/buttonPayPal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:drawableLeft="@drawable/ic_paypal"
            android:drawableTint="@color/material_on_background_emphasis_high_type"
            android:text="@string/paypal"
            android:textColor="@color/material_on_background_emphasis_high_type"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="RtlHardcoded"
            tools:targetApi="m" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewCredentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/material_on_background_emphasis_high_type" />


</LinearLayout>